fixed lack of centering on footer using align-items center in parent div

--- a/style2.css
+++ b/style2.css
@@ -85,6 +85,7 @@ div.thirds-container {
     position: relative;
     background-size: cover;
     justify-content: space-evenly;
+    align-items: center;
     height: 100%;
 }
 
@@ -107,5 +108,5 @@ div.thirds-container {
     font-weight: normal;
     font-size: 2.7rem;
     font-family: 'Oswald', sans-serif;
-    padding-top: 75px;
-}
+/*     padding-top: 75px;
+ */}
